# ExcelProcessingProject

./: .clang-format  .gitignore  .gitmodules  README.md  build.sh  meson.build
.devcontainer/: .bashrc  Dockerfile  c_cpp_properties.json  devcontainer.json  env_setup.sh  motd
applications/: meson.build
applications/manager/: manager.m.cpp  manager_manager.cpp  manager_manager.hpp  meson.build
applications/motion/: meson.build  motion.m.cpp  motion_motion.cpp  motion_motion.hpp
applications/restapi/: meson.build  restapi.m.cpp  restapi_restapi.cpp  restapi_restapi.hpp  restapi_server.cpp  restapi_server.hpp
applications/sample/: meson.build  sample.m.cpp  sample_sample.cpp  sample_sample.hpp
libraries/: meson.build
libraries/cudascii/: cudascii_dummy.cpp  cudascii_dummy.cu  cudascii_dummy.hpp  meson.build
libraries/demo/: demo_dummy.cpp  demo_dummy.hpp  meson.build
libraries/ssc/: meson.build
libraries/ssc/configuration/: configuration_configuration.cpp
libraries/ssc/error/: error_common.cpp  error_common.hpp  error_processing.cpp  error_processing.hpp
libraries/ssc/service/: meson.build  service_cli_data.cpp  service_cli_data.hpp  service_service.cpp  service_service.hpp
libraries/ssc/state/: state_state.cpp
libraries/ssc/status/: status_status.cpp
subprojects/: build.ninja  catch2.wrap  compile_commands.json  cpp-httplib.wrap  imgui.wrap  libjpeg-turbo.wrap  libpng.wrap  libspng.wrap  oiio.wrap  pistache.wrap  pybind11.wrap  selene.wrap  ut.wrap
subprojects/CLI11-2.3.2/: .meson-subproject-wrap-hash.txt
subprojects/CLI11-2.3.2/examples/: json.cpp
subprojects/SDL2-2.26.0/: meson.build
subprojects/fmt-9.1.0/: .meson-subproject-wrap-hash.txt
subprojects/imgui-1.89.2/: .meson-subproject-wrap-hash.txt
subprojects/packagecache/: libXrandr-1.2.1.tar.xz
subprojects/pybind11-2.10.3/: .meson-subproject-wrap-hash.txt
subprojects/rapidjson-1.1.0/: .meson-subproject-wrap-hash.txt
subprojects/spdlog-1.11.0/: .meson-subproject-wrap-hash.txt
subprojects/ut-1.1.9/: .meson-subproject-wrap-hash.txt
